# rb-2026-ivf

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  info.json  nginx.conf  vcpkg.json
nginx/: nginx.conf
src/: benchmark.cpp  main.cpp  preProccess.cpp  quantize.hpp  vectorSearch.cpp  vectorSearch.hpp  vectorize.cpp  vectorize.hpp
studies/k-means/: note.ipynb  pyproject.toml
studies/quantization/: note.ipynb  pyproject.toml
